# AURA

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pyproject.toml.bak  render.yaml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: aura-quality.yml  ci.yml  quality.yml  upload-sarif.yml
adapters/: dummy_analyzer.py
api/: logging.py  main.py  openapi.yaml
ci/: ci.yml
cli/: main.py
configs/: aura.yaml
contracts/: AccessControl.sol  AlmostSafe.sol  ComplexVault.sol  EthernautReentrance.sol  ModifierVault.sol  RealWorld.sol  RealWorldModern.sol  Reentrancy.sol  ReentrancyDemo.sol  Simple.sol  TxOrigin.sol  Vault.sol
data/sample/: golden.json
docker/: Dockerfile.api  Dockerfile.worker
docs/: ARCHITECTURE.md  MODEL_CARD.md
evaluation/: gate.py  results.json  run_eval.py
frontend/: .env.example  index.html  package-lock.json
frontend/src/: App.tsx  api.ts  index.css  types.ts  utils.ts
frontend/src/components/: ErrorBanner.tsx  FindingCard.tsx  GlassCard.tsx  RiskGauge.tsx  SeverityBadge.tsx  SeverityChart.tsx  Sidebar.tsx  Spinner.tsx  StatCard.tsx
frontend/src/pages/: Analyze.tsx  Dashboard.tsx  Explain.tsx  History.tsx
reports/: benchmark.json  cli_analyze_summary.txt  index.md  slither_raw.json  summary.json  summary.md  summary.sarif
samples/: Overflow.sol  Reentrancy.sol  Safe.sol
samples/contracts/: Reentrancy.sol  TxOriginAuth.sol  UncheckedMath.sol
schemas/: finding.schema.json  report.schema.json
security/: SANDBOX.md
src/aura/: cli.py
src/aura/core/: explain.py  llm.py  parse.py  pipeline.py  prompt.py
src/aura/core/analyzers/: base.py  mythril_adapter.py  normalize.py  slither_adapter.py
src/aura/core/evaluation/: __init__.py  evaluator.py  metrics.py
src/aura/core/persistence/: crud.py  db.py  models.py
src/aura/core/reporting/: aggregate.py  json_report.py  md_report.py  sarif_report.py
src/aura/core/scoring/: config.py  rules_v0.py
src/aura/types/: llm.py
tests/: conftest.py  test_api.py  test_api_errors.py  test_api_explain_llm.py  test_cli.py  test_cli_eval_behaviour.py  test_db.py  test_evaluation.py  test_evaluation_math_safety.py  test_evaluation_per_rule.py  test_evaluation_sarif_edgecases.py  test_explain_llm_prompt.py  test_llm_stub.py  test_phase0_cli.py  test_phase0_repo_files.py  test_phase0_toolchain.py  test_pipeline.py  test_pipeline_empty.py  test_reporting_aggregate.py  test_reports.py  test_version.py
tests/fixtures/: slither_parsed_min.json
tools/: analyze_and_report.sh  aura-check.sh  post_analyze.py
