[project]
name = "aura"
version = "0.0.1"
description = "AURA — AI Unified Risk Auditor (Phase 0 bootstrap)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
  "black>=24.8.0",
  "pre-commit>=4.0.1",
]

[project.scripts]
aura = "aura.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","B","UP","ARG","C4","SIM"]
lint.ignore = ["E501"]  # handled by black

[tool.black]
line-length = 100
target-version = ["py311"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
